--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,16 @@ article div{
     color: #eee;
     padding: 1em;
 }
-
+/*--
+banner{
+    display: flex;
+    background-image: url("../img/isaac_wide_banner.png");
+    background-repeat: no-repeat;
+    width: 1920px;
+    padding: 300px;
+    justify-content: center;
+}
+--*/
 article{
     display: grid;
     grid-gap: .25em;
